[package]
  name = "etherdream-emulator"
  version = "0.0.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An Ether Dream (laser DAC) emulator that draws on a canvas"
  keywords = [ "EtherDream", "laser", "projector", "ether", "dream" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/etherdream-emulator.rs"

[[bin]]
  name = "etherdream-emulator"

[dependencies]
  #glutin = "0.5.*"
  #glium = "0.14.*"
  #glium_graphics = "0.26.*"
  #image = "0.10.*"

  glium = "0.14.*"
  piston = "0.23.*"
  piston2d-graphics = "0.16.0"
  piston2d-glium_graphics = "0.26.0"

  log = "0.3.*"
  net2 = "0.2.*"

