[package]
  name = "etherdream-emulator"
  version = "0.1.4"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An EtherDream (laser DAC) emulator and visualization tool."
  keywords = [ "EtherDream", "laser", "projector", "ether", "dream" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/etherdream-emulator.rs"

[[bin]]
  name = "etherdream-emulator"

[dependencies]
  byteorder = "0.5.*"
  clap = "2.10.1"
  glium = "0.14.*"
  ilda = "0.0.2"
  log = "0.3.*"
  net2 = "0.2.*"
  piston = "0.23.*"
  piston2d-glium_graphics = "0.26.0"
  piston2d-graphics = "0.16.0"

