[package]
  name = "etherdream-emulator"
  version = "0.1.4"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "An EtherDream (laser DAC) emulator and visualization tool."
  keywords = [ "EtherDream", "laser", "projector", "ether", "dream" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/etherdream-emulator.rs"

[[bin]]
  name = "etherdream-emulator"

[dependencies]
  byteorder = "1.4.3"
  clap = "3.2.16"
  glium = "0.32.1"
  ilda = "0.2.0"
  log = "0.4.17"
  net2 = "0.2.37"
  piston = "0.53.1"
  piston2d-glium_graphics = "0.90.0"
  piston2d-graphics = "0.42.0"
